--- a/dev-activity.html
+++ b/dev-activity.html
@@ -13,7 +13,7 @@
 		<meta name="description" content="" />
 		<meta http-equiv="content-language" content="en" />
 
-		<link href="//netdna.bootstrapcdn.com/bootswatch/2.2.2/superhero/bootstrap.min.css" rel="stylesheet" />
+		<link href="//netdna.bootstrapcdn.com/bootswatch/2.2.2/flatly/bootstrap.min.css" rel="stylesheet" />
 		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css" rel="stylesheet" />
 		<link href="./css/bootswatch.css" rel="stylesheet" />
 		<link href="./css/reflow-skin.css" rel="stylesheet" />
@@ -138,7 +138,7 @@
  </div> 
  <div class="section"> 
   <h3 id="Changes_between_2013-06-10_and_2013-07-11">Changes between 2013-06-10 and 2013-07-11</h3> 
-  <p>Total commits: 166<br />Total number of files changed: 361</p> 
+  <p>Total commits: 167<br />Total number of files changed: 361</p> 
   <table border="0" class="bodyTable table table-striped table-hover"> 
    <thead> 
     <tr class="a"> 
@@ -155,7 +155,7 @@
     </tr> 
     <tr class="a"> 
      <td>Martin Lau &lt;m@hum.ph&gt;</td> 
-     <td>99</td> 
+     <td>100</td> 
      <td>361</td> 
     </tr> 
    </tbody> 
