--- a/surefire-report.html
+++ b/surefire-report.html
@@ -13,7 +13,7 @@
 		<meta name="description" content="" />
 		<meta http-equiv="content-language" content="en" />
 
-		<link href="//netdna.bootstrapcdn.com/bootswatch/2.2.2/superhero/bootstrap.min.css" rel="stylesheet" />
+		<link href="//netdna.bootstrapcdn.com/bootswatch/2.2.2/flatly/bootstrap.min.css" rel="stylesheet" />
 		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css" rel="stylesheet" />
 		<link href="./css/bootswatch.css" rel="stylesheet" />
 		<link href="./css/reflow-skin.css" rel="stylesheet" />
@@ -174,10 +174,10 @@ function toggleDisplay(elementId) {
    <tr class="b"> 
     <td>65</td> 
     <td>0</td> 
+    <td>1</td> 
     <td>0</td> 
-    <td>0</td> 
-    <td>100%</td> 
-    <td>45.185</td> 
+    <td>98.462%</td> 
+    <td>37.14</td> 
    </tr> 
   </tbody> 
  </table> 
@@ -210,7 +210,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>22.687</td> 
+    <td>18.631</td> 
    </tr> 
    <tr class="a"> 
     <td><a href="#io.fixture.interceptor">io.fixture.interceptor</a></td> 
@@ -219,7 +219,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>0.058</td> 
+    <td>0.045</td> 
    </tr> 
    <tr class="b"> 
     <td><a href="#io.fixture.controller">io.fixture.controller</a></td> 
@@ -228,16 +228,16 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>0.038</td> 
+    <td>0.029</td> 
    </tr> 
    <tr class="a"> 
     <td><a href="#io.fixture.repository">io.fixture.repository</a></td> 
     <td>22</td> 
     <td>0</td> 
+    <td>1</td> 
     <td>0</td> 
-    <td>0</td> 
-    <td>100%</td> 
-    <td>22.361</td> 
+    <td>95.455%</td> 
+    <td>18.4</td> 
    </tr> 
    <tr class="b"> 
     <td><a href="#io.fixture.domain">io.fixture.domain</a></td> 
@@ -246,7 +246,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>0.041</td> 
+    <td>0.035</td> 
    </tr> 
   </tbody> 
  </table> 
@@ -277,7 +277,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>7.588</td> 
+     <td>6.228</td> 
     </tr> 
     <tr class="a"> 
      <td><a href="#io.fixture.securityPersistentTokenRepositoryImplTest"><i class="icon-ok"></i></a></td> 
@@ -287,7 +287,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>7.517</td> 
+     <td>6.177</td> 
     </tr> 
     <tr class="b"> 
      <td><a href="#io.fixture.securityUserDetailsManagerImplTest"><i class="icon-ok"></i></a></td> 
@@ -297,7 +297,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>7.582</td> 
+     <td>6.226</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -327,7 +327,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.058</td> 
+     <td>0.045</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -357,7 +357,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.013</td> 
+     <td>0.007</td> 
     </tr> 
     <tr class="a"> 
      <td><a href="#io.fixture.controllerSecureControllerTest"><i class="icon-ok"></i></a></td> 
@@ -367,7 +367,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.016</td> 
+     <td>0.008</td> 
     </tr> 
     <tr class="b"> 
      <td><a href="#io.fixture.controllerStaticControllerTest"><i class="icon-ok"></i></a></td> 
@@ -377,7 +377,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.009</td> 
+     <td>0.014</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -407,7 +407,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>7.462</td> 
+     <td>6.137</td> 
     </tr> 
     <tr class="a"> 
      <td><a href="#io.fixture.repositoryPersistentLoginRepositoryTest"><i class="icon-ok"></i></a></td> 
@@ -417,17 +417,17 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>7.437</td> 
+     <td>6.111</td> 
     </tr> 
     <tr class="b"> 
-     <td><a href="#io.fixture.repositoryUserRepositoryTest"><i class="icon-ok"></i></a></td> 
+     <td><a href="#io.fixture.repositoryUserRepositoryTest"><i class="icon-warning-sign"></i></a></td> 
      <td><a href="#io.fixture.repositoryUserRepositoryTest">UserRepositoryTest</a></td> 
      <td>7</td> 
      <td>0</td> 
+     <td>1</td> 
      <td>0</td> 
-     <td>0</td> 
-     <td>100%</td> 
-     <td>7.462</td> 
+     <td>85.714%</td> 
+     <td>6.152</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -457,7 +457,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.041</td> 
+     <td>0.035</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -476,12 +476,12 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testIndex</td> 
-     <td>0.013</td> 
+     <td>0.006</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testUsers</td> 
-     <td>0</td> 
+     <td>0.001</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -494,7 +494,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testIndex</td> 
-     <td>0.016</td> 
+     <td>0.008</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -507,7 +507,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testAccessDenied</td> 
-     <td>0.008</td> 
+     <td>0.013</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -550,12 +550,12 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testGetId</td> 
-     <td>0.041</td> 
+     <td>0.034</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testIsNewWithVersion</td> 
-     <td>0</td> 
+     <td>0.001</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
@@ -573,12 +573,12 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testPreHandleWithNullThemeName</td> 
-     <td>0.056</td> 
+     <td>0.044</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testPreHandle</td> 
-     <td>0.002</td> 
+     <td>0.001</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
@@ -601,12 +601,12 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindAllUsernamesWithSingleUser</td> 
-     <td>7.371</td> 
+     <td>6.075</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindAllNames</td> 
-     <td>0.007</td> 
+     <td>0.005</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
@@ -616,32 +616,32 @@ function toggleDisplay(elementId) {
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteWithInvalidName</td> 
-     <td>0.024</td> 
+     <td>0.02</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindAllUsernamesWithMultipleUsers</td> 
-     <td>0.017</td> 
+     <td>0.005</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDelete</td> 
-     <td>0.009</td> 
-    </tr> 
-    <tr class="a"> 
-     <td><i class="icon-ok"></i></td> 
-     <td>testDeleteWithUsers</td> 
-     <td>0.01</td> 
-    </tr> 
-    <tr class="b"> 
-     <td><i class="icon-ok"></i></td> 
-     <td>testFindAllUsernamesWithInvalidName</td> 
      <td>0.007</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
+     <td>testDeleteWithUsers</td> 
+     <td>0.006</td> 
+    </tr> 
+    <tr class="b"> 
+     <td><i class="icon-ok"></i></td> 
+     <td>testFindAllUsernamesWithInvalidName</td> 
+     <td>0.004</td> 
+    </tr> 
+    <tr class="a"> 
+     <td><i class="icon-ok"></i></td> 
      <td>testFindOneWithInvalidName</td> 
-     <td>0.008</td> 
+     <td>0.006</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -654,7 +654,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteAllForUsernameForUnknownUser</td> 
-     <td>7.377</td> 
+     <td>6.077</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -664,7 +664,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOne</td> 
-     <td>0.018</td> 
+     <td>0.008</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -674,12 +674,12 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOneWithInvalidSeries</td> 
-     <td>0.006</td> 
+     <td>0.004</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteAllForUsernameForUserWithOnePersistentLogin</td> 
-     <td>0.025</td> 
+     <td>0.011</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -692,37 +692,55 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOne</td> 
-     <td>7.403</td> 
+     <td>6.095</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testExistsWithInvalidUsername</td> 
-     <td>0.006</td> 
+     <td>0.005</td> 
     </tr> 
     <tr class="a"> 
-     <td><i class="icon-ok"></i></td> 
-     <td>testDeleteWithGroupsAndPersistentLogins</td> 
-     <td>0.019</td> 
+     <td><a href="#io.fixture.repository.UserRepositoryTest.testDeleteWithGroupsAndPersistentLogins"><i class="icon-exclamation-sign"></i></a></td> 
+     <td><a href="#io.fixture.repository.UserRepositoryTest.testDeleteWithGroupsAndPersistentLogins">testDeleteWithGroupsAndPersistentLogins</a> 
+      <div class="detailToggle" style="display:inline"> 
+       <a href="javascript:toggleDisplay('io_fixture_repository_UserRepositoryTest_testDeleteWithGroupsAndPersistentLogins');"><span style="display:inline;" id="io_fixture_repository_UserRepositoryTest_testDeleteWithGroupsAndPersistentLoginsoff"> + </span><span style="display:none;" id="io_fixture_repository_UserRepositoryTest_testDeleteWithGroupsAndPersistentLoginson"> - </span>[ Detail ]</a> 
+      </div></td> 
+     <td>0.027</td> 
+    </tr> 
+    <tr class="b"> 
+     <td></td> 
+     <td>. Expected &lt;5&gt; actual &lt;6&gt;</td> 
+     <td></td> 
+    </tr> 
+    <tr class="a"> 
+     <td></td> 
+     <td> 
+      <div id="io_fixture_repository_UserRepositoryTest_testDeleteWithGroupsAndPersistentLoginserror" style="display:none;"> 
+       <div> 
+        <pre>java.lang.AssertionError: . Expected &lt;5&gt; actual &lt;6&gt;at kotlin.test.DefaultAsserter.fail(TestJVM.kt:82)at kotlin.test.DefaultAsserter.assertEquals(TestJVM.kt:66)at kotlin.test.TestPackage$src$Test$419798348.assertEquals(Test.kt:38)at kotlin.test.TestPackage.assertEquals$default(Unknown Source)at io.fixture.repository.UserRepositoryTest.testDeleteWithGroupsAndPersistentLogins(UserRepositoryTest.kt:50)</pre> 
+       </div> 
+      </div></td> 
+     <td></td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOneWithInvalidUsername</td> 
-     <td>0.008</td> 
+     <td>0.005</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDelete</td> 
-     <td>0.012</td> 
+     <td>0.009</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testExists</td> 
-     <td>0.007</td> 
+     <td>0.005</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteWithInvalidUsername</td> 
-     <td>0.007</td> 
+     <td>0.006</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -735,52 +753,52 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testAddUserToGroup</td> 
-     <td>7.486</td> 
+     <td>6.149</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteGroup</td> 
-     <td>0.008</td> 
+     <td>0.007</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindGroupAuthorities</td> 
-     <td>0.011</td> 
-    </tr> 
-    <tr class="b"> 
-     <td><i class="icon-ok"></i></td> 
-     <td>testCreateGroup</td> 
-     <td>0.015</td> 
-    </tr> 
-    <tr class="a"> 
-     <td><i class="icon-ok"></i></td> 
-     <td>testRenameGroup</td> 
      <td>0.009</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
+     <td>testCreateGroup</td> 
+     <td>0.012</td> 
+    </tr> 
+    <tr class="a"> 
+     <td><i class="icon-ok"></i></td> 
+     <td>testRenameGroup</td> 
+     <td>0.008</td> 
+    </tr> 
+    <tr class="b"> 
+     <td><i class="icon-ok"></i></td> 
      <td>testRemoveGroupAuthority</td> 
-     <td>0.013</td> 
+     <td>0.011</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindUsersInGroup</td> 
-     <td>0.007</td> 
+     <td>0.006</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testRemoveUserFromGroup</td> 
-     <td>0.019</td> 
+     <td>0.011</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testAddGroupAuthority</td> 
-     <td>0.013</td> 
+     <td>0.01</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindAllGroups</td> 
-     <td>0.007</td> 
+     <td>0.005</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -793,22 +811,22 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testUpdateToken</td> 
-     <td>7.472</td> 
+     <td>6.143</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testGetTokenForSeries</td> 
-     <td>0.012</td> 
+     <td>0.007</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testCreateNewToken</td> 
-     <td>0.021</td> 
+     <td>0.018</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testRemoveUserTokens</td> 
-     <td>0.012</td> 
+     <td>0.009</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -821,66 +839,92 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testLoadUserByUsernameWithInvalidUsername</td> 
-     <td>7.373</td> 
+     <td>6.078</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testLoadUserByUsername</td> 
-     <td>0.053</td> 
+     <td>0.026</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testChangePasswordWithoutAuthentication</td> 
-     <td>0.012</td> 
+     <td>0.007</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testUpdateUser</td> 
-     <td>0.041</td> 
+     <td>0.037</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testChangePasswordWithAuthenticationManagerSetsAuthentication</td> 
-     <td>0.013</td> 
+     <td>0.01</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testChangePasswordWithAuthenticationManagerChangesPassword</td> 
-     <td>0.013</td> 
+     <td>0.011</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testChangePasswordWithoutAuthenticationManagerChangesPassword</td> 
-     <td>0.018</td> 
+     <td>0.013</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testUserExists</td> 
-     <td>0.008</td> 
+     <td>0.006</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testCreateUser</td> 
-     <td>0.018</td> 
+     <td>0.013</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteUser</td> 
-     <td>0.013</td> 
+     <td>0.009</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testUserExistsWithInvalidUsername</td> 
-     <td>0.008</td> 
+     <td>0.007</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testChangePasswordWithoutAuthenticationManagerSetsAuthentication</td> 
-     <td>0.012</td> 
+     <td>0.009</td> 
     </tr> 
    </tbody> 
   </table> 
  </div> 
+ <br /> 
+</div> 
+<div class="section"> 
+ <h2 id="Failure_Details">Failure Details</h2> 
+ <a name="Failure_Details"></a> 
+ <p>[<a href="#Summary">Summary</a>] [<a href="#Package_List">Package List</a>] [<a href="#Test_Cases">Test Cases</a>]</p> 
+ <br /> 
+ <table border="1" class="bodyTable table table-striped table-hover"> 
+  <tbody> 
+   <tr class="a"> 
+    <td><i class="icon-exclamation-sign"></i></td> 
+    <td><a name="io.fixture.repository.UserRepositoryTest.testDeleteWithGroupsAndPersistentLogins"></a>testDeleteWithGroupsAndPersistentLogins</td> 
+   </tr> 
+   <tr class="b"> 
+    <td></td> 
+    <td>java.lang.AssertionError: . Expected &lt;5&gt; actual &lt;6&gt;</td> 
+   </tr> 
+   <tr class="a"> 
+    <td></td> 
+    <td> 
+     <div id="testDeleteWithGroupsAndPersistentLoginserror">
+       io.fixture.repository.UserRepositoryTest:50 
+     </div></td> 
+   </tr> 
+  </tbody> 
+ </table> 
  <br /> 
 </div>
 			</div>
